--- a/Main/views/layouts/main.handlebars
+++ b/Main/views/layouts/main.handlebars
@@ -4,22 +4,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Fund My Project!</title>
+  <title>Tech blog forum</title>
   <link rel="stylesheet" href="/css/jass.css">
   <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
+
+  
   <div class="flex-column justify-space-around">
     <header class="display-flex justify-space-between align-center p-2">
       <h1>
-        <span role="img" aria-label="money">💸</span>
-        <a href="/">Tech blog forum</a>
+        <a href="/">The Tech blog</a>
       </h1>
       <nav>
-        <!-- Conditionally render login or logout links -->
+       
         {{#if logged_in}}
         <a href="/profile">profile</a> |
+        
         <button class="no-button" id="logout">logout</button>
         {{else}}
         <a href="/login">login</a>
@@ -27,7 +29,7 @@
       </nav>
     </header>
     <main class="container container-fluid mt-5">
-      <!-- Render the sub layout -->
+      
       {{{ body }}}
     </main>
     <footer>
@@ -35,10 +37,25 @@
     </footer>
   </div>
 
-  <!-- Render script for logged in users only -->
+
   {{#if logged_in}}
   <script src="/js/logout.js"></script>
   {{/if}}
+
+      <div class="hero-body">
+                <div class="container has-text-centered">
+                    <div class="column is-6 is-offset-3">
+                        <h1 class="title">
+                            Join our forum!
+                        </h1>
+                        <h2 class="subtitle">
+                           the Tech industry is an ever growing field with titans like microsoft and apple creating new innovations by the minute gives us so much to dive into and discuss.
+                        </h2>
+                       
+                        </div>
+                    </div>
+                </div>
+            </div>
 </body>
 
-</html>
+</html> 
