--- a/Main/public/css/style.css
+++ b/Main/public/css/style.css
@@ -1,4 +1,8 @@
-header, .project:not(:last-child) {
+* {
+  background-color: #c7e5ee;
+}
+
+header, .post:not(:last-child) {
     border-bottom: 1px solid #ccc;
   }
   
@@ -22,4 +26,16 @@ header, .project:not(:last-child) {
     font-weight: bold;
     margin-left: -5px;
   }
-  
+
+  .subtitle {
+    font-size: smaller;
+    
+  }
+
+  .is-info {
+    color: #ccc;
+
+  }
+  .button {
+    background-color: #065b83;
+  }
