updated navigation bar

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -20,7 +20,8 @@
       <nav>
        
         {{#if logged_in}}
-        <a href="/profile">profile</a> |
+        <a href="/homepage">Home</a> |
+        <a href="/profile">Dashboard</a> |
         
         <button class="no-button" id="logout">logout</button>
         {{else}}
