--- a/public/css/style.css
+++ b/public/css/style.css
@@ -39,3 +39,8 @@ header, .post:not(:last-child) {
   .button {
     background-color: #065b83;
   }
+
+  nav {
+   margin-right: 500px;
+   margin-top: 100px;
+  }
